--- a/css/main.styl
+++ b/css/main.styl
@@ -147,11 +147,23 @@ a
             
 .content
     position relative
-    margin-top 50px
+    margin-top 55px
     margin-bottom 30px
     margin-left menuWidth + menuContentGap
     margin-right rightMargin
     z-index 1
+    
+.intro
+    position relative
+    padding-right 75px
+    max-width 800px
+    margin-bottom 50px
+    
+    &__title
+        font-size 20px
+        
+    &__desc
+        margin-top 10px
 
 .project
     position relative
