--- a/css/main.css
+++ b/css/main.css
@@ -101,11 +101,23 @@ a:hover:before {
 }
 .content {
   position: relative;
-  margin-top: 50px;
+  margin-top: 55px;
   margin-bottom: 30px;
   margin-left: 320px;
   margin-right: 120px;
   z-index: 1;
+}
+.intro {
+  position: relative;
+  padding-right: 75px;
+  max-width: 800px;
+  margin-bottom: 50px;
+}
+.intro__title {
+  font-size: 20px;
+}
+.intro__desc {
+  margin-top: 10px;
 }
 .project {
   position: relative;
